@@ -23,8 +23,8 @@ bin=`cd "$bin"; pwd`
 
 . "$bin"/hama-config.sh
 
-# start mapred daemons
-# start jobtracker first to minimize connection errors at startup
+# start bsp daemons
+# start zookeeper first to minimize connection errors at startup
 "$bin"/hama-daemons.sh --config "${HAMA_CONF_DIR}" start zookeeper
 "$bin"/hama-daemon.sh --config $HAMA_CONF_DIR start bspmaster
 "$bin"/hama-daemons.sh --config $HAMA_CONF_DIR start groom
